--- a/FrontEnd/src/app/layout/footer/footer.component.css
+++ b/FrontEnd/src/app/layout/footer/footer.component.css
@@ -1,22 +1,22 @@
-.custom-footer {
+/* .custom-footer {
 	background-color: #1c395f;
-	/* z-index: -99999; */
-}
+	z-index: -99999;
+} */
 
-.custom-row-header {
+/* .custom-row-header {
 	width: fit-content;
 	margin-bottom: 4px;
-}
+} */
 
-.custom-row-end {
+/* .custom-row-end {
 	width: fit-content;
 	color: rgb(182, 206, 250);
 	font-size: 17px;
-}
+} */
 
-.custom-row {
+/* .custom-row {
 	width: fit-content;
 	margin-bottom: 3px;
 	color: rgb(182, 206, 250);
 	font-size: 17px;
-}
+} */
