--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -30,3 +30,38 @@
 		</div>
 	</div>
 </div> -->
+<!--
+<mat-grid-list
+	class="bg-primary"
+	cols="2"
+	rowHeight="fit"
+	[style.height]="'100px'"
+	[gutterSize]="'1px'">
+	<mat-grid-tile>
+		Tile body
+		<mat-grid-tile-footer>
+			<h3 mat-line>Heading</h3>
+			<span mat-line>Sub heading</span>
+			<mat-icon>ligature</mat-icon>
+		</mat-grid-tile-footer>
+	</mat-grid-tile>
+	<mat-grid-tile>
+		Tile body
+		<mat-grid-tile-footer>
+			<h3 mat-line>Heading</h3>
+			<span mat-line>Sub heading</span>
+			<mat-icon>ligature</mat-icon>
+		</mat-grid-tile-footer>
+	</mat-grid-tile>
+</mat-grid-list> -->
+
+<footer>
+	<div></div>
+
+	<!-- row 2 if deviceXs -->
+	@if (deviceXs) {
+	<div></div>
+	<div></div>
+	}
+	<p class="text-center text-white">Copyright © 2022. All rights reserved</p>
+</footer>
