--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -30,38 +30,69 @@
 		</div>
 	</div>
 </div> -->
-<!--
-<mat-grid-list
-	class="bg-primary"
-	cols="2"
-	rowHeight="fit"
-	[style.height]="'100px'"
-	[gutterSize]="'1px'">
-	<mat-grid-tile>
-		Tile body
-		<mat-grid-tile-footer>
-			<h3 mat-line>Heading</h3>
-			<span mat-line>Sub heading</span>
-			<mat-icon>ligature</mat-icon>
-		</mat-grid-tile-footer>
-	</mat-grid-tile>
-	<mat-grid-tile>
-		Tile body
-		<mat-grid-tile-footer>
-			<h3 mat-line>Heading</h3>
-			<span mat-line>Sub heading</span>
-			<mat-icon>ligature</mat-icon>
-		</mat-grid-tile-footer>
-	</mat-grid-tile>
-</mat-grid-list> -->
+<footer
+	class="text-white text-center text-lg-start rounded"
+	style="background-color: #3f51b5">
+	<!-- Grid container -->
+	<div class="container p-4">
+		<!--Grid row-->
+		<div class="row">
+			<!--Grid column-->
+			<div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+				<h5 class="text-uppercase">Footer Content</h5>
 
-<footer>
-	<div></div>
+				<p>
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+					Iste atque ea quis molestias. Fugiat pariatur maxime quis
+					culpa corporis vitae repudiandae aliquam voluptatem veniam,
+					est atque cumque eum delectus sint!
+				</p>
+			</div>
+			<!--Grid column-->
 
-	<!-- row 2 if deviceXs -->
-	@if (deviceXs) {
-	<div></div>
-	<div></div>
-	}
-	<p class="text-center text-white">Copyright © 2022. All rights reserved</p>
+			<!--Grid column-->
+			<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+				<h5 class="text-uppercase">Links</h5>
+
+				<ul class="list-unstyled mb-0">
+					<li>
+						<a href="#!" class="text-white">Link 1</a>
+					</li>
+					<li>
+						<a href="#!" class="text-white">Link 2</a>
+					</li>
+					<li>
+						<a href="#!" class="text-white">Link 3</a>
+					</li>
+					<li>
+						<a href="#!" class="text-white">Link 4</a>
+					</li>
+				</ul>
+			</div>
+			<!--Grid column-->
+
+			<!--Grid column-->
+			<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+				<h5 class="text-uppercase mb-0">Links</h5>
+
+				<ul class="list-unstyled">
+					<li>
+						<a href="#!" class="text-white">Link 1</a>
+					</li>
+					<li>
+						<a href="#!" class="text-white">Link 2</a>
+					</li>
+					<li>
+						<a href="#!" class="text-white">Link 3</a>
+					</li>
+					<li>
+						<a href="#!" class="text-white">Link 4</a>
+					</li>
+				</ul>
+			</div>
+			<!--Grid column-->
+		</div>
+		<!--Grid row-->
+	</div>
+	<!-- Grid container -->
 </footer>
