--- a/FrontEnd/src/app/module/home/home.component.html
+++ b/FrontEnd/src/app/module/home/home.component.html
@@ -23,4 +23,45 @@
 	<p>This is homepage</p>
 	<p>This is homepage</p>
 	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
+	<p>This is homepage</p>
 </div>
