--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -31,14 +31,11 @@
 	</div>
 </div> -->
 
-<footer
+<!-- <footer
 	class="text-white text-center text-lg-start rounded"
 	style="background-color: #3f51b5">
-	<!-- Grid container -->
 	<div class="container p-4">
-		<!--Grid row-->
 		<div class="row">
-			<!--Grid column-->
 			<div class="col-lg-6 col-md-12 mb-4 mb-md-0">
 				<h5 class="text-uppercase">Footer Content</h5>
 
@@ -49,9 +46,6 @@
 					est atque cumque eum delectus sint!
 				</p>
 			</div>
-			<!--Grid column-->
-
-			<!--Grid column-->
 			<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 				<h5 class="text-uppercase">Links</h5>
 
@@ -70,9 +64,6 @@
 					</li>
 				</ul>
 			</div>
-			<!--Grid column-->
-
-			<!--Grid column-->
 			<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 				<h5 class="text-uppercase mb-0">Links</h5>
 
@@ -91,9 +82,6 @@
 					</li>
 				</ul>
 			</div>
-			<!--Grid column-->
 		</div>
-		<!--Grid row-->
 	</div>
-	<!-- Grid container -->
-</footer>
+</footer> -->
