Revert "fix warning backend"
This reverts commit 51cb5f66d4bc038db7107385c6c692e7db3a10ab.

# Conflicts:
#	BackEnd/Api/Controllers/CvController.cs
#	FrontEnd/src/app/layout/footer/footer.component.html
#	FrontEnd/src/app/layout/header/header.component.html

--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -28,6 +28,7 @@
 
 		<div>
 			<button mat-button [mat-menu-trigger-for]="menu">
+				<!-- @if(deviceXs){ -->
 				<mat-icon class="mat-18">more_vert</mat-icon>
 				<span class="d-none d-sm-inline">Menu</span>
 			</button>
