feat: cv manage generate cv manage with tab and another component fix footer

--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -71,6 +71,10 @@
 			<i class="fa-solid fa-user"></i>
 			<span class="mx-5 align-right">Profile</span>
 		</button>
+		<button mat-menu-item (click)="handleRouteToCVManage()">
+			<i class="fa-solid fa-file"></i>
+			<span class="mx-5 align-right">CV manage</span>
+		</button>
 		<button mat-menu-item>
 			<i class="fa-solid fa-gear"></i>
 			<span class="mx-5 align-right">Settings</span>
