--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,18 +1,12 @@
-<div fxLayout="column" fxLayoutAlign="space-between" fxFill fxLayoutGap="10px">
-	<div>
-		<app-header [deviceXs]="deviceXs"></app-header>
-		@if(this.isLoading$ | async){
-		<div class="spinner_overlay">
-			<mat-progress-spinner [mode]="'indeterminate'"> </mat-progress-spinner>
-		</div>
-		}
+<div class="d-flex flex-column min-vh-100 g-1">
+	<app-header></app-header>
+	@if(this.isLoading$ | async){
+	<div class="spinner_overlay">
+		<mat-progress-spinner [mode]="'indeterminate'"> </mat-progress-spinner>
 	</div>
-	<div>
-		<router-outlet></router-outlet>
-	</div>
-	<div>
-		<app-footer [deviceXs]="deviceXs"></app-footer>
-	</div>
+	}
+	<router-outlet class="p-2 mx-5"></router-outlet>
+	<app-footer class="pt-3 mt-auto"></app-footer>
 </div>
 
 <!-- MDB -->
