--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -5,7 +5,7 @@
 		<mat-progress-spinner [mode]="'indeterminate'"> </mat-progress-spinner>
 	</div>
 	}
-	<router-outlet class="p-2 mx-5"></router-outlet>
+	<router-outlet class="py2 px-5 mx-5"></router-outlet>
 	<app-footer class="pt-3 mt-auto"></app-footer>
 </div>
 
