fix: returnUrl navigate to returnUrl after login

--- a/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
+++ b/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
@@ -1,1 +1,74 @@
-<p>candidate-profile works!</p>
+<div class="container justify-content-center">
+	<div class="row">
+		<div class="fixed px-3 mx-5 shadow-lg border border-dark rounded col-auto">
+			<div class="d-block">
+				<div class="justify-content-center">
+					<h3>Profile Strength</h3>
+					<h2>Status</h2>
+					<p>$number completed</p>
+				</div>
+				<div>
+					<ngb-progressbar class="mb-3" [showValue]="true" type="success" [value]="25" />
+				</div>
+			</div>
+			<mat-divider></mat-divider>
+			<div>
+				<h4>Complete profile to Superstars for attractive CV</h4>
+				<div>
+					<i class="fa-solid fa-plus"></i>
+					<span><a href="#"> Add Work Experience </a></span>
+				</div>
+				<div>
+					<i class="fa-solid fa-plus"></i>
+					<span><a href="#"> Add Certificates </a></span>
+				</div>
+				<div>
+					<i class="fa-solid fa-plus"></i>
+					<span><a href="#"> Add Awards </a></span>
+				</div>
+			</div>
+			<mat-divider></mat-divider>
+			<div>
+				<h4>Explore CV templates and download your CV</h4>
+				<button mat-button class="bg-danger text-white col-12">Preview and Download</button>
+			</div>
+		</div>
+		<div class="d-block mx-5 shadow-lg border border-dark rounded col">
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+			<p>a</p>
+		</div>
+	</div>
+</div>
