--- a/FrontEnd/src/app/module/auth/logout-dialog/logout-dialog.component.html
+++ b/FrontEnd/src/app/module/auth/logout-dialog/logout-dialog.component.html
@@ -1,20 +1,13 @@
-<h1 matDialogTitle class="align-content-center justify-content-center">
-	Chế muốn đăng xuất thật à
-</h1>
+<div class="bg-body-tertiary align-content-center justify-content-center">
+	<h1 matDialogTitle class="text-center">Chế muốn đăng xuất thật à</h1>
 
-<mat-dialog-content
-	class="flex-column align-content-center justify-content-center">
-	Đừng xa em đêm nay khi bóng trăng qua hàng cây
-</mat-dialog-content>
+	<mat-dialog-content> Đừng xa em đêm nay khi bóng trăng qua hàng cây </mat-dialog-content>
 
-<mat-dialog-actions>
-	<!-- <button mat-raised-button color="primary" matDialogClose></button> -->
-	<!-- <button cdkFocusInitial></button> -->
+	<mat-dialog-actions align="center">
+		<!-- <button mat-raised-button color="primary" matDialogClose></button> -->
+		<!-- <button cdkFocusInitial></button> -->
 
-	<button mat-raised-button color="primary" (click)="onNoClick()">
-		Thôi, không đăng xuất nữa
-	</button>
-	<button mat-button color="warn" (click)="onLogoutClick()" cdkFocusInitial>
-		Đăng xuất đi
-	</button>
-</mat-dialog-actions>
+		<button mat-raised-button color="primary" (click)="onNoClick()" class="me-3">Thôi, không đăng xuất nữa</button>
+		<button mat-button color="warn" (click)="onLogoutClick()" cdkFocusInitial>Đăng xuất đi</button>
+	</mat-dialog-actions>
+</div>
