fix: rename property in db

--- a/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
+++ b/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
@@ -162,7 +162,6 @@
 				</div>
 
 				<!-- WORK EXPERIENCE -->
-				<!-- EDUCATION -->
 				<div class="card-body">
 					<div class="card shadow-sm">
 						<p class="h4 pt-4 ps-3">Work experience</p>
@@ -170,17 +169,39 @@
 							<i class="fa-regular fa-square-plus text-danger"></i>
 						</div>
 						<mat-divider></mat-divider>
-						<!-- list education -->
+						<!-- list work experience -->
 						<div class="container position-relative p-3 mb-2">
 							<div class="position-absolute top-0 end-0">
 								<i class="fa-regular fa-pen-to-square text-danger m-3"></i>
 								<i class="fa-regular fa-trash-can p-4"></i>
 							</div>
 							<div>
-								<div class="h5">Information technology</div>
-								<div class="py-2">University of Technical and Education</div>
-								<div class="py-2">10/2020 - NOW</div>
-								<div class="py-2">Majoring in Information Systems</div>
+								<div class="h5">.NET Web Developer Intern</div>
+								<div class="h6 py-2">FPT Software</div>
+								<div class="h6 py-2">10/2020 - NOW</div>
+								<div class="h6 py-2">Project</div>
+								<div class="py-2">
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
+										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
+										laborum consequatur, unde iste repellat nemo minus.
+									</p>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
+										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
+										laborum consequatur, unde iste repellat nemo minus.
+									</p>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
+										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
+										laborum consequatur, unde iste repellat nemo minus.
+									</p>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
+										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
+										laborum consequatur, unde iste repellat nemo minus.
+									</p>
+								</div>
 								<mat-divider></mat-divider>
 							</div>
 						</div>
@@ -190,28 +211,66 @@
 								<i class="fa-regular fa-trash-can p-4"></i>
 							</div>
 							<div>
-								<div class="h5">Information technology</div>
-								<div class="py-2">University of Technical and Education</div>
-								<div class="py-2">10/2020 - NOW</div>
-								<div class="py-2">Majoring in Information Systems</div>
-								<mat-divider></mat-divider>
-							</div>
-						</div>
-						<div class="container position-relative p-3 mb-2">
-							<div class="position-absolute top-0 end-0">
-								<i class="fa-regular fa-pen-to-square text-danger m-3"></i>
-								<i class="fa-regular fa-trash-can p-4"></i>
-							</div>
-							<div>
-								<div class="h5">Information technology</div>
-								<div class="py-2">University of Technical and Education</div>
-								<div class="py-2">10/2020 - NOW</div>
-								<div class="py-2">Majoring in Information Systems</div>
+								<div class="h5">.NET Web Developer Intern</div>
+								<div class="h6 py-2">FPT Software</div>
+								<div class="h6 py-2">10/2020 - NOW</div>
+								<div class="h6 py-2">Project</div>
+								<div class="py-2">
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
+										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
+										laborum consequatur, unde iste repellat nemo minus.
+									</p>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
+										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
+										laborum consequatur, unde iste repellat nemo minus.
+									</p>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
+										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
+										laborum consequatur, unde iste repellat nemo minus.
+									</p>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
+										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
+										laborum consequatur, unde iste repellat nemo minus.
+									</p>
+								</div>
 								<mat-divider></mat-divider>
 							</div>
 						</div>
 					</div>
 				</div>
+
+				<!-- SKILLS -->
+				<div class="card-body">
+					<div class="card shadow-sm">
+						<p class="h4 pt-4 ps-3">Skills</p>
+						<div class="position-absolute top-4 end-0 p-4">
+							<i class="fa-regular fa-pen-to-square text-danger"></i>
+						</div>
+						<mat-divider></mat-divider>
+						<!-- list skills -->
+						<div class="container position-relative p-3 mb-2">
+							<div>
+								<div class="h5">.NET Web Developer Intern</div>
+								<div class="h6 py-2">FPT Software</div>
+								<div class="h6 py-2">10/2020 - NOW</div>
+								<div class="h6 py-2">Project</div>
+								<div class="py-2">
+									<mat-divider></mat-divider>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- PERSONAL PROJECT -->
+
+				<!-- CERTIFICATE -->
+
+				<!-- AWARDS -->
 			</div>
 		</div>
 	</div>
