feat: candidate profile update

--- a/FrontEnd/src/app/module/reccer/company/company.component.html
+++ b/FrontEnd/src/app/module/reccer/company/company.component.html
@@ -1,16 +1,8 @@
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
-<h1>BRUHHHHHHHHHHH</h1>
+<div class="container py-3">
+	<p class="h1 text-center">List Companies</p>
+	@for (company of companies; track $index) {
+	<p>
+		{{ company.companyName }}
+	</p>
+	}
+</div>
