--- a/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
+++ b/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
@@ -1,3 +1,4 @@
+<p class="h1 text-center py-1">Candidate profile</p>
 <div class="container-fluid justify-content-center py-2">
 	<div class="row">
 		<div class="d-none d-lg-block px-3 mx-5 col-auto">
@@ -41,236 +42,25 @@
 		<div class="col">
 			<div class="card shadow-lg border border-dark rounded">
 				<!-- GENERAL INFORMATION -->
-				<div class="card-body">
-					<div class="card shadow-sm">
-						<div class="card-body">
-							<div class="h4">Candidate name</div>
-							<h4>Role</h4>
-							<div class="container">
-								<div class="row">
-									<div class="col">
-										<i class="fa-regular fa-envelope p-2" aria-hidden="true"></i>
-										<span>email</span>
-									</div>
-									<div class="col">
-										<i class="fa fa-phone-slash p-2" aria-hidden="true"></i>
-										<span>phone</span>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col">
-										<i class="fa-regular fa-calendar p-2" aria-hidden="true"></i>
-										<span>birthday</span>
-									</div>
-									<div class="col">
-										<i class="fa fa-venus p-2" aria-hidden="true"></i>
-										<span>Male</span>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col">
-										<i class="fa fa-address-book p-2" aria-hidden="true"></i>
-										<span>address</span>
-									</div>
-									<div class="col">
-										<i class="fa fa-globe p-2" aria-hidden="true"></i>
-										<span>link</span>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="position-absolute top-4 end-0 p-4">
-							<i class="fa-regular fa-pen-to-square text-danger"></i>
-						</div>
-					</div>
-				</div>
-
-				<!-- ABOUT ME -->
-				<div class="card-body">
-					<div class="card shadow-sm">
-						<div class="card-body">
-							<div class="h4">About me</div>
-							<mat-divider></mat-divider>
-							<div class="py-3">
-								<p>
-									Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui minus non
-									exercitationem aut iusto dolorum, veniam atque sit sint, ea placeat dolores incidunt
-									cupiditate, delectus maiores dignissimos quo temporibus! Officiis.
-								</p>
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur itaque maiores
-									exercitationem quaerat reiciendis, asperiores quis explicabo unde praesentium! Optio
-									quo deserunt iste officia doloremque dicta, quod aliquam. Modi, fugiat?
-								</p>
-							</div>
-						</div>
-						<div class="position-absolute top-4 end-0 p-4">
-							<i class="fa-regular fa-pen-to-square text-danger"></i>
-						</div>
-					</div>
-				</div>
+				<app-personal-detail></app-personal-detail>
 
 				<!-- EDUCATION -->
-				<div class="card-body">
-					<div class="card shadow-sm">
-						<p class="h4 pt-4 ps-3">Education</p>
-						<div class="position-absolute top-4 end-0 p-4">
-							<i class="fa-regular fa-square-plus text-danger"></i>
-						</div>
-						<mat-divider></mat-divider>
-						<!-- list education -->
-						<div class="container position-relative p-3 mb-2">
-							<div class="position-absolute top-0 end-0">
-								<i class="fa-regular fa-pen-to-square text-danger m-3"></i>
-								<i class="fa-regular fa-trash-can p-4"></i>
-							</div>
-							<div>
-								<div class="h5">Information technology</div>
-								<div class="py-2">University of Technical and Education</div>
-								<div class="py-2">10/2020 - NOW</div>
-								<div class="py-2">Majoring in Information Systems</div>
-								<mat-divider></mat-divider>
-							</div>
-						</div>
-						<div class="container position-relative p-3 mb-2">
-							<div class="position-absolute top-0 end-0">
-								<i class="fa-regular fa-pen-to-square text-danger m-3"></i>
-								<i class="fa-regular fa-trash-can p-4"></i>
-							</div>
-							<div>
-								<div class="h5">Information technology</div>
-								<div class="py-2">University of Technical and Education</div>
-								<div class="py-2">10/2020 - NOW</div>
-								<div class="py-2">Majoring in Information Systems</div>
-								<mat-divider></mat-divider>
-							</div>
-						</div>
-						<div class="container position-relative p-3 mb-2">
-							<div class="position-absolute top-0 end-0">
-								<i class="fa-regular fa-pen-to-square text-danger m-3"></i>
-								<i class="fa-regular fa-trash-can p-4"></i>
-							</div>
-							<div>
-								<div class="h5">Information technology</div>
-								<div class="py-2">University of Technical and Education</div>
-								<div class="py-2">10/2020 - NOW</div>
-								<div class="py-2">Majoring in Information Systems</div>
-								<mat-divider></mat-divider>
-							</div>
-						</div>
-					</div>
-				</div>
+				<app-candidate-education></app-candidate-education>
 
 				<!-- WORK EXPERIENCE -->
-				<div class="card-body">
-					<div class="card shadow-sm">
-						<p class="h4 pt-4 ps-3">Work experience</p>
-						<div class="position-absolute top-4 end-0 p-4">
-							<i class="fa-regular fa-square-plus text-danger"></i>
-						</div>
-						<mat-divider></mat-divider>
-						<!-- list work experience -->
-						<div class="container position-relative p-3 mb-2">
-							<div class="position-absolute top-0 end-0">
-								<i class="fa-regular fa-pen-to-square text-danger m-3"></i>
-								<i class="fa-regular fa-trash-can p-4"></i>
-							</div>
-							<div>
-								<div class="h5">.NET Web Developer Intern</div>
-								<div class="h6 py-2">FPT Software</div>
-								<div class="h6 py-2">10/2020 - NOW</div>
-								<div class="h6 py-2">Project</div>
-								<div class="py-2">
-									<p>
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
-										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
-										laborum consequatur, unde iste repellat nemo minus.
-									</p>
-									<p>
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
-										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
-										laborum consequatur, unde iste repellat nemo minus.
-									</p>
-									<p>
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
-										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
-										laborum consequatur, unde iste repellat nemo minus.
-									</p>
-									<p>
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
-										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
-										laborum consequatur, unde iste repellat nemo minus.
-									</p>
-								</div>
-								<mat-divider></mat-divider>
-							</div>
-						</div>
-						<div class="container position-relative p-3 mb-2">
-							<div class="position-absolute top-0 end-0">
-								<i class="fa-regular fa-pen-to-square text-danger m-3"></i>
-								<i class="fa-regular fa-trash-can p-4"></i>
-							</div>
-							<div>
-								<div class="h5">.NET Web Developer Intern</div>
-								<div class="h6 py-2">FPT Software</div>
-								<div class="h6 py-2">10/2020 - NOW</div>
-								<div class="h6 py-2">Project</div>
-								<div class="py-2">
-									<p>
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
-										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
-										laborum consequatur, unde iste repellat nemo minus.
-									</p>
-									<p>
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
-										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
-										laborum consequatur, unde iste repellat nemo minus.
-									</p>
-									<p>
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
-										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
-										laborum consequatur, unde iste repellat nemo minus.
-									</p>
-									<p>
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias quasi ad!
-										Similique illo praesentium deleniti modi nostrum autem ratione debitis est, quia
-										laborum consequatur, unde iste repellat nemo minus.
-									</p>
-								</div>
-								<mat-divider></mat-divider>
-							</div>
-						</div>
-					</div>
-				</div>
+				<app-work-experience></app-work-experience>
 
 				<!-- SKILLS -->
-				<div class="card-body">
-					<div class="card shadow-sm">
-						<p class="h4 pt-4 ps-3">Skills</p>
-						<div class="position-absolute top-4 end-0 p-4">
-							<i class="fa-regular fa-pen-to-square text-danger"></i>
-						</div>
-						<mat-divider></mat-divider>
-						<!-- list skills -->
-						<div class="container position-relative p-3 mb-2">
-							<div>
-								<div class="h5">.NET Web Developer Intern</div>
-								<div class="h6 py-2">FPT Software</div>
-								<div class="h6 py-2">10/2020 - NOW</div>
-								<div class="h6 py-2">Project</div>
-								<div class="py-2">
-									<mat-divider></mat-divider>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+				<app-candidate-skills></app-candidate-skills>
 
 				<!-- PERSONAL PROJECT -->
+				<app-personal-project></app-personal-project>
 
 				<!-- CERTIFICATE -->
+				<app-candidate-certificate></app-candidate-certificate>
 
 				<!-- AWARDS -->
+				<app-candidate-awards></app-candidate-awards>
 			</div>
 		</div>
 	</div>
