--- a/FRONTEND/src/app/module/reccer/interviewer/interviewer.component.html
+++ b/FRONTEND/src/app/module/reccer/interviewer/interviewer.component.html
@@ -90,36 +90,40 @@
 						</div>
 						<div class="mt-2" style="font-size: 16px;">
 							@switch (item.daysToLastInterview) {
-							@case (-1) {
+							@case (null) {
 							Haven't had any interview
 							}
 							@case (0) {
-							Last interview was today
+							Newest interview is today
+							}
+							@case (-1) {
+							Newest interview was yesterday
 							}
 							@case (1) {
-							Last interview was 1 day ago
+							Newest interview is tomorrow
 							}
 							@default {
-							Last interview was {{item.daysToLastInterview}} days ago
-							}
-							}
+							@if (item.daysToLastInterview){
+							@if (item.daysToLastInterview < 0){ Newest interview was {{item.daysToLastInterview}} days
+								ago } @else { Newest interview is {{item.daysToLastInterview}} days from now } } } }
+								</div>
 						</div>
-					</div>
-					<div class="py-2 ms-4 d-flex flex-row justify-content-center" style=" width: 25%;">
+						<div class="py-2 ms-4 d-flex flex-row justify-content-center" style=" width: 25%;">
 
-						<button mat-icon-button matTooltip="New interview">
-							<mat-icon>group_add</mat-icon>
-						</button>
-						<button mat-icon-button matTooltip="All interviews">
-							<mat-icon>list</mat-icon>
-						</button>
-					</div>
+							<button mat-icon-button matTooltip="New interview">
+								<mat-icon>group_add</mat-icon>
+							</button>
+							<button mat-icon-button matTooltip="All interviews"
+								(click)="openInterviewsHistoryDialog(item.interviewerId, '100ms', '0ms')">
+								<mat-icon>list</mat-icon>
+							</button>
+						</div>
 
+					</div>
 				</div>
+
+				}
 			</div>
 
-			}
 		</div>
-
 	</div>
-</div>
