rec-application: add filter by candidate status & company status

--- a/FrontEnd/src/app/module/reccer/application/application.component.html
+++ b/FrontEnd/src/app/module/reccer/application/application.component.html
@@ -14,8 +14,25 @@
 				<mat-form-field style="width: 100%;">
 					<mat-label>Sort</mat-label>
 					<mat-select formControlName="sortString">
-						<mat-option value="DateTime_DESC">Newest</mat-option>
-						<mat-option value="DateTime_ASC">Oldest</mat-option>
+						<mat-option value="CreatedTime_DESC">Newest</mat-option>
+						<mat-option value="CreatedTime_ASC">Oldest</mat-option>
+						<mat-option value="Priority_DESC">Descending Prioriry</mat-option>
+						<mat-option value="Priority_ASC">Ascending Prioriry</mat-option>
+					</mat-select>
+				</mat-form-field>
+				<mat-form-field style="width: 100%;">
+					<mat-label>Candidate Status</mat-label>
+					<mat-select formControlName="candidateStatus">
+						<mat-option value="{{this.application_CandidateStatus.Pending}}">Pending</mat-option>
+						<mat-option value="{{this.application_CandidateStatus.Passed}}">Passed</mat-option>
+					</mat-select>
+				</mat-form-field>
+				<mat-form-field style="width: 100%;">
+					<mat-label>Company Status</mat-label>
+					<mat-select formControlName="companyStatus">
+						<mat-option value="{{this.application_CompanyStatus.Pending}}">Pending</mat-option>
+						<mat-option value="{{this.application_CompanyStatus.Accecpted}}">Accecpted</mat-option>
+						<mat-option value="{{this.application_CompanyStatus.Rejected}}">Rejected</mat-option>
 					</mat-select>
 				</mat-form-field>
 				<section
@@ -35,7 +52,7 @@
 					<div style="width: 80%;">
 						<div class="p-1 ps-4 shadow"
 							style="color: #ffffff; font-weight: 500; font-size: 17px; border-top-left-radius: 0.25rem; border-bottom-right-radius: 0.9rem; width: 100%; background-color: rgb(0, 32, 149);">
-							{{item.dateTime | date:'fullDate'}}
+							{{item.createdTime | date:'fullDate'}}
 						</div>
 						<div class="p-2 mt-2 d-flex flex-row" style="width: 100%;">
 							@for (candidateHasSkill of item.cv?.candidate?.candidateHasSkills; track candidateHasSkill)
