--- a/FRONTEND/src/app/module/reccer/interview/interview.component.html
+++ b/FRONTEND/src/app/module/reccer/interview/interview.component.html
@@ -29,15 +29,9 @@
 				</mat-form-field>
 
 				<mat-form-field style="width: 100%;">
-					<mat-label>Candidate Status</mat-label>
-					<mat-select formControlName="candidateStatus">
-						<mat-option value="{{this.interview_CandidateStatus.NotStart}}">Not start</mat-option>
-						<mat-option value="{{this.interview_CandidateStatus.Finished}}">Finished</mat-option>
-					</mat-select>
-				</mat-form-field>
-				<mat-form-field style="width: 100%;">
-					<mat-label>Company Status</mat-label>
+					<mat-label>Status</mat-label>
 					<mat-select formControlName="companyStatus">
+						<mat-option value=""></mat-option>
 						<mat-option value="{{this.interview_CompanyStatus.Pending}}">Pending</mat-option>
 						<mat-option value="{{this.interview_CompanyStatus.Passed}}">Passed</mat-option>
 						<mat-option value="{{this.interview_CompanyStatus.Failed}}">Failed</mat-option>
@@ -77,105 +71,119 @@
 
 			</form>
 		</div>
-		<div class="ms-2 p-2 rounded-1" style="width: 75%; height: 600px; overflow-y: scroll;">
-			@for (item of this.fetchedInterviews; track item) {
-			<div class="card p-4 m-3 shadow">
-				<div>
-					<div class="heading fs-5 d-flex flex-row">
-						<div>
-							{{item.meetingDate | date:"fullDate"}}
-						</div>
-						<div class="ms-auto">
-							{{item.startTime?.slice(0,
-							5)}} -
-							{{item.endTime?.slice(0, 5)}}
-						</div>
-					</div>
-					<div class="mt-1 d-flex flex-row" style="line-height: 20px; font-weight: 400;">
-						<div>
-							<i class="bi bi-building-fill"></i>
-							{{item.address}}
-						</div>
-						<div class="ms-auto">
-							{{item.detailLocation}}
-						</div>
-					</div>
+		<div class="ms-2 p-2 rounded-1" style="width: 75%;">
+			<div class="mt-3 mb-3 d-flex flex-row">
+				<div (click)="this.openAddFormDialog('100ms', '0ms')">
+					<app-expandbutton notExpandedWidth="50px" color="primary" expandedWidth="200px"
+						expandedLabel="Add new interview" icon="add"></app-expandbutton>
 				</div>
-				<div class="d-flex flex-row" style="width: 100%;">
-					<div class="fs-5 mt-4" style="width: 100%;">
-						<div class="heading fs-5 d-flex flex-row">
-							<div style="cursor: pointer;"
-								[routerLink]="['/positions/detail', item.application?.position?.positionId]">
-								{{item.application?.position?.positionName}}
-							</div>
-							<div class="ms-auto" style="font-size: 17px;">
-								{{item.application?.position?.startDate | date: "dd/MM/yyyy"}} -
-								{{item.application?.position?.endDate | date: "dd/MM/yyyy"}}
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="container">
-					<div class="row mt-3">
-						<div class="col-sm d-flex flex-column align-items-center"
-							style="width: 150px; height: fit-content;">
-							<div>RECRUITER</div>
-							<div class="icon"><img style="border-radius: 50%;" width="100px" height="100px"
-									src="{{item.recruiter?.user?.imageURL}}"
-									alt="{{item.recruiter?.user?.fullName}} avatar" />
-							</div>
-							<div style="text-align: center; width: fit-content;">{{item.recruiter?.user?.fullName}}
-							</div>
-						</div>
-						<div class="col-sm d-flex flex-column align-items-center"
-							style="width: 150px; height: fit-content;">
-							<div>INTERVIEWER</div>
-							<div class="icon"><img style="border-radius: 50%;" width="100px" height="100px"
-									src="{{item.interviewer?.user?.imageURL}}"
-									alt="{{item.interviewer?.user?.fullName}} avatar" />
-							</div>
-							<div style="text-align: center; overflow-wrap: break-word;">
-								{{item.interviewer?.user?.fullName}}</div>
-						</div>
-						<div class="col-sm d-flex flex-column align-items-center"
-							style="width: 150px; height: fit-content;">
-							<div>CANDIDATE</div>
-							<div class="icon"><img style="border-radius: 50%;" width="100px" height="100px"
-									src="{{item.application?.cv?.candidate?.user?.imageURL}}"
-									alt="{{item.application?.cv?.candidate?.user?.fullName}} avatar" />
-							</div>
-							<div style="text-align: center; overflow-wrap: break-word;">
-								{{item.application?.cv?.candidate?.user?.fullName}}</div>
-
-							<a href="{{item.application?.cv?.cvPdf}}" matTooltip="Candidate CV File"
-								style="text-align: center; overflow-wrap: break-word;">
-								{{item.application?.cv?.cvName}}</a>
-						</div>
-					</div>
-				</div>
-				<div class="d-flex flex-column align-items-center">
-					@switch (item.company_Status) {
-					@case (this.interview_CompanyStatus.Pending) {
-					<div class="p-2 rounded-2" style=" background-color: rgb(195, 195, 84);">
-						Pending
-					</div>
-					}
-					@case (this.interview_CompanyStatus.Passed) {
-					<div class="p-2 rounded-2" style="background-color: rgb(126, 255, 126);">
-						Passed
-					</div>
-					}
-					@case (this.interview_CompanyStatus.Failed) {
-					<div class="p-2 rounded-2" style="background-color: #d27070; color: white;">
-						Failed
-					</div>
-					}
-					@default {
-					not match
-					}
-					}
+				<div class="ms-2" (click)="this.openSendMultiEmailDialog('100ms', '0ms')">
+					<app-expandbutton color="accent" notExpandedWidth="100px" expandedWidth="200px"
+						expandedLabel="Mail to people" icon="multi-mail"></app-expandbutton>
 				</div>
 			</div>
-			}
+			<div style="height: 600px; overflow-y: scroll; border: rgb(219, 219, 219) solid 1px;">
+				@for (item of this.fetchedInterviews; track item) {
+				<div class="card p-4 m-3 shadow">
+					<div>
+						<div class="heading fs-5 d-flex flex-row">
+							<div>
+								{{item.meetingDate | date:"fullDate"}}
+							</div>
+							<div class="ms-auto">
+								{{item.startTime?.slice(0,
+								5)}} -
+								{{item.endTime?.slice(0, 5)}}
+							</div>
+						</div>
+						<div class="mt-1 d-flex flex-row" style="line-height: 20px; font-weight: 400;">
+							<div>
+								<i class="bi bi-building-fill"></i>
+								{{item.address}}
+							</div>
+							<div class="ms-auto">
+								{{item.detailLocation}}
+							</div>
+						</div>
+					</div>
+					<div class="d-flex flex-row" style="width: 100%;">
+						<div class="fs-5 mt-4" style="width: 100%;">
+							<div class="heading fs-5 d-flex flex-row">
+								<div style="cursor: pointer;"
+									[routerLink]="['/positions/detail', item.application?.position?.positionId]">
+									{{item.application?.position?.positionName}}
+								</div>
+								<div class="ms-auto" style="font-size: 17px;">
+									{{item.application?.position?.startDate | date: "dd/MM/yyyy"}} -
+									{{item.application?.position?.endDate | date: "dd/MM/yyyy"}}
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="container">
+						<div class="row mt-3">
+							<div class="col-sm d-flex flex-column align-items-center"
+								style="width: 150px; height: fit-content;">
+								<div>RECRUITER</div>
+								<div class="icon"><img style="border-radius: 50%;" width="100px" height="100px"
+										src="{{item.recruiter?.user?.imageURL}}"
+										alt="{{item.recruiter?.user?.fullName}} avatar" />
+								</div>
+								<div style="text-align: center; width: fit-content;">{{item.recruiter?.user?.fullName}}
+								</div>
+							</div>
+							<div class="col-sm d-flex flex-column align-items-center"
+								style="width: 150px; height: fit-content;">
+								<div>INTERVIEWER</div>
+								<div class="icon"><img style="border-radius: 50%;" width="100px" height="100px"
+										src="{{item.interviewer?.user?.imageURL}}"
+										alt="{{item.interviewer?.user?.fullName}} avatar" />
+								</div>
+								<div style="text-align: center; overflow-wrap: break-word;">
+									{{item.interviewer?.user?.fullName}}</div>
+							</div>
+							<div class="col-sm d-flex flex-column align-items-center"
+								style="width: 150px; height: fit-content;">
+								<div>CANDIDATE</div>
+								<div class="icon"><img style="border-radius: 50%;" width="100px" height="100px"
+										src="{{item.application?.cv?.candidate?.user?.imageURL}}"
+										alt="{{item.application?.cv?.candidate?.user?.fullName}} avatar" />
+								</div>
+								<div style="text-align: center; overflow-wrap: break-word;">
+									{{item.application?.cv?.candidate?.user?.fullName}}</div>
+
+								<a href="{{item.application?.cv?.cvPdf}}" matTooltip="Candidate CV File"
+									style="text-align: center; overflow-wrap: break-word;">
+									{{item.application?.cv?.cvName}}</a>
+							</div>
+						</div>
+					</div>
+					<div class="d-flex flex-column align-items-center">
+						@switch (item.company_Status) {
+						@case (this.interview_CompanyStatus.Pending) {
+						<div class="p-2 rounded-2" style=" background-color: rgb(195, 195, 84);">
+							Pending
+						</div>
+						}
+						@case (this.interview_CompanyStatus.Passed) {
+						<div class="p-2 rounded-2" style="background-color: rgb(126, 255, 126);">
+							Passed
+						</div>
+						}
+						@case (this.interview_CompanyStatus.Failed) {
+						<div class="p-2 rounded-2" style="background-color: #d27070; color: white;">
+							Failed
+						</div>
+						}
+						@default {
+						not match
+						}
+						}
+					</div>
+				</div>
+				}
+			</div>
+
 		</div>
+
 	</div>
